# Crystal_DuckServer

./: .gitignore  CMakeLists.txt
src/: ApplicationInfo.cpp  ApplicationInfo.h  ApplicationInfoDefines.h.in  ApplicationSettings.cpp  ApplicationSettings.h  Butler.cpp  Butler.h  ConductorConnections.cpp  ConductorConnections.h  DevUtils.h  main.cpp
src/Networks/: NetworkBase.cpp  NetworkBase.h  NetworkConnectionBase.cpp  NetworkConnectionBase.h  SocketUtils.h  TcpNetwork.cpp  TcpNetwork.h  TcpNetworkConnection.cpp  TcpNetworkConnection.h
